--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logo-bullyng.png" class="nav-img " loading="lazy">
+            <img src="img/Representacao-grafica-de-crianca-com-autismo-.jpg" class="nav-img  "loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
